--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-slideshow-image": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
