--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://josecabrerajr7.github.io/tinyone/"
+  "homepage": "https://josecabrerajr7.github.io/tinyone"
 }
